# LingYi

./: .gitignore  AGENTS.md  README.md  audit_mcp_docs.py  presets.example.json  pyproject.toml  test_delete_message.py  test_webui_e2e.py  test_webui_sessions.py
deploy/: lingyi-council.service  lingyi-web.service
docs/: AI_NEWS_20260404.md  AI_NEWS_20260406.md  AI_NEWS_20260407.md  AI_NEWS_20260408.md  AUDIT_REPORT_v0.13.md  AUDIT_REPORT_v0.15.md  AUDIT_REPORT_v0.15_SELF_AUDIT.md  AUDIT_REPORT_v0.16_MCP.md  AUDIT_v0.16.md  BOUNDARY_LOG.md  BOUNDARY_MANAGEMENT.md  BRIEFING_DAEMON.md  CHANGELOG_v0.16.md  CONSTRAINT_LAYER_IMPLEMENTATION.md  CONSTRAINT_LAYER_QUICK_REFERENCE.md  COUNCIL_RULES.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PRINCIPLES.md  DIARY_20260407.md  DOUBAN_CONVERSATION_SUMMARY.md  ECOSYSTEM_CENSUS_v1.md  ECOSYSTEM_HARD_TOOLS_COUNT.md  EVOLUTION_AND_OUTLOOK.md  FINAL_SUMMARY_20260407.md  GUARD3_FIX_SUMMARY.md  HALLUCINATION_FRONTIER_REPORT.md  HALLUCINATION_QUOTES.md  HALLUCINATION_RESEARCH.md  JOURNEY.md  LINGMESSAGE_AUDIT_REPORT.md  LINGMESSAGE_DISCUSSIONS.md  LINGMESSAGE_DISCUSSIONS_ARCHIVE.md  LINGMESSAGE_DISCUSSION_6_PROCESS.md  LINGMESSAGE_MCP_DESIGN.md  LINGMESSAGE_OUTREACH_PROPOSAL.md  LINGMESSAGE_RFC.md  LINGTONG_INTEGRATION_PROGRESS.md  LINGYAN_PUSH_RESEARCH_METHODOLOGY.md  LINGYI_MCP_ASSESSMENT.md  LING_FAMILY_FUTURE.md  (+26 more)
scripts/: council_health_check.py  diagnose_chat.py  diagnose_login.py  install-briefing-daemon.sh  intelligence_report.py  setup_council_health_cron.sh  setup_cron.sh  test_login_redirect.py  test_ui_tars.py  test_websocket_chat.py  (+2 more)
(+108 files in other folders)
