[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingyi"
version = "0.10.0"
description = "灵依 — 私我AI助理"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "edge-tts>=6.0"]

[project.scripts]
lingyi = "lingyi.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
